# Librett

./: CMakeLists.txt
src/: CMakeLists.txt  GpuModelKernel.cpp  GpuUtils.h  TensorTester.cpp  kernel.cpp  kernel.h  librett.cpp  plan.cpp  sycl_device.hpp  uniapi.h
tests/: CMakeLists.txt  librett_test.cpp
